# LeagueCustomProxy

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  docker-compose.proxchat.yml  package-lock.json  package.json  tsconfig.json  webpack.config.js  webpack.server.config.js
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: ci.yml  icon-watch.yml  release.yml  virustotal.yml
docs/: PUBLISH.md  SETUP.md  THREAT_MODEL.md  architecture.md  compliance.md  friend-playbook.md  self-hosting.md  threat-model.md  user-guide.md
docs/plans/: 2026-04-11-tauri-standalone-implementation.md  2026-04-11-tauri-standalone-migration.md  2026-06-02-server-side-positions.md  2026-06-02-v0.3.0-design.md  2026-06-02-v0.3.0-implementation-plan.md  (+3 more)
models/: champion-classifier-metrics.json  champion-icons-manifest.json  champion_classifier.onnx  champion_classifier.onnx.data  champion_labels.json
scripts/: annulus_separation.py  build-client-dev.bat  build-client.bat  build-frontend-only.bat  build-frontend-server.js  build-frontend.js  build-rust-only.bat  build-server.bat  bump-version.mjs  clean_crops_labels.json  deploy-server.sh  eval_real_crops.py  generate-icons.bat  generate-icons.mjs  icon-diff-summary.mjs  icon-set-changed.mjs  refresh-model.mjs  replay_frame.py  requirements.txt  ssim_separation.py  start-server.bat  train_champion_classifier.py  update-champion-icons.js
server/: Dockerfile  package-lock.json  package.json  tsconfig.json
server/src/: admin.ts  (+7 more)
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.server.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/icons-server/: icon.icns
src-tauri/src/: capture.rs  global_keys.rs  host_server.rs  host_server_admin.rs  host_tunnel.rs  lcu.rs  main.rs  scanner_host.rs  server_main.rs  updater.rs
(+80 files in other folders)
