[package]
name = "leagueproxy"
version = "2.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.33"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
base64 = "0.22"
windows = { version = "0.58", features = [
  "Win32_Graphics_Gdi",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_System_Threading",
  "Win32_Foundation",
] }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[[bin]]
name = "leagueproxy"
path = "src/main.rs"

[[bin]]
name = "leagueproxy-server"
path = "src/server_main.rs"

# Default release — balanced size/speed. lto=false keeps link times reasonable on Windows MSVC.
[profile.release]
lto = false
codegen-units = 16
strip = "symbols"

# Faster iteration when you only need a working exe (dev script uses this via --profile).
[profile.release-fast]
inherits = "release"
opt-level = 2
lto = false
codegen-units = 256
strip = false
